[package]
name = "verlet_physics_solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coffee = { version = "0.4.1", features = ["opengl"] }
rayon = "1.7.0"
rand = "0.8.5"
scoped_threadpool = "0.1.9"
num_cpus = "1.0"

[profile.dev]
opt-level = 2
